--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "<img src=\"img/decisionmaking.png\" width=400>\n",
+    "<img src=\"img/decisionmaking.png\" width=\"400\">\n",
     "\n",
     "# ELEC-E7851 - ELEC-E7890 - User Research\n",
     "# Lecture 10 - Modeling decision making\n",
