--- a/main.ipynb
+++ b/main.ipynb
@@ -10,8 +10,8 @@
    "source": [
     "<img src=\"img/decisionmaking.png\" width=\"400\">\n",
     "\n",
-    "# ELEC-E7851 - ELEC-E7890 - User Research\n",
-    "# Lecture 10 - Modeling decision making\n",
+    "# Course title\n",
+    "# Lecture XX - Lecture title\n",
     "\n",
     "**Aurélien Nioche**\n",
     "\n",
@@ -35,12 +35,9 @@
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
     "<h2><img src=\"img/logo/goal.png\" width=20, align=\"left\">&nbsp;Learning objectives</h2>\n",
-    "    <br>Learn by a basic example the elementary rules of experimentation, including:\n",
+    "    <br>Learn to:\n",
     "    <ul>\n",
-    "        <li>How to define a research problem (see <a href=\"#1.-Task-Model-&-Decision-Making-Models\" class=\"alert-link\">Section 1</a>);\n",
-    "        <li>How to define hypothesis  (see <a href=\"#2.-Exploratory-Simulations\" class=\"alert-link\">Section 2</a>);\n",
-    "        <li>How to operationalize these hypothesis (see <a href=\"#3.-Parameter-Fitting-&amp;-Parameter-Recovery\" class=\"alert-link\">Section 3</a>);\n",
-    "        <li>How to design the study accordingly (see <a href=\"#4.-Model-Comparison-&amp;-Model-Recovery\" class=\"alert-link\">Section 4</a>).\n",
+    "        <li>Learn (see <a href=\"#1.-Part-1\" class=\"alert-link\">Section 1</a>);\n",
     "    </ul>\n",
     "</div>"
    ]
@@ -55,13 +52,10 @@
    "source": [
     "## Course Overview\n",
     "\n",
-    "<!-- \n",
-    "<img src=\"img/design.png\" width=30, align=\"left\">&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"font-size:2rem; font-weight:bold\"><a href=\"#1.-Task-Model-&-Decision-Making-Models\">1. Task Model &amp; Decision Making Models</a></span>\n",
-    "-->\n",
     "\n",
-    "<a href=\"#1.1-Task-definition\">1.1 Task definition</a>\n",
+    "<img src=\"img/design.png\" width=30, align=\"left\">&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"font-size:2rem; font-weight:bold\"><a href=\"#1.-Part-1\">1. Section 1</a></span>\n",
     "\n",
-    "<a href=\"#1.2-Models-definition\">1.2 Models definition</a>\n",
+    "<a href=\"#1.1-Subsection-1.1\">1.1 Subsection 1.1</a>\n",
     "\n",
     "<span style=\"font-size:2rem; font-weight:bold\"><a href=\"#Conclusive-Remarks-and-a-Few-Take-Aways\">Conclusive Remarks and a Few Take Aways</a></span>\n",
     "\n",
@@ -72,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Build an experiment\n",
+    "## 1. Section 1\n",
     "<a href=\"#Course-Overview\">Course Overview</a>\n",
     "\n",
     "<img src=\"img/design.png\" width=300>\n",
@@ -80,7 +74,7 @@
     "<div class=\"alert alert-block alert-success\">\n",
     "<h3><img src=\"img/logo/goal.png\" width=20, align=\"left\">&nbsp;Section Goal</h3>\n",
     "<ul>\n",
-    "    <li>How to build an experiment.\n",
+    "    <li>How to XXX.\n",
     "    </ul>\n",
     "</div>"
    ]
@@ -89,50 +83,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Define a research problem\n",
-    "<a href=\"#Course-Overview\">Course Overview</a>\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<h4><img src=\"img/logo/goal.png\" width=20, align=\"left\">&nbsp;Goal</h4>\n",
-    "    <ul>\n",
-    "        <li>Refine the question, such that you can answer it by an experiment.\n",
-    "    </ul>\n",
-    "</div>\n",
-    "\n",
     "<img src=\"img/logo/how_to.png\" width=25, align=\"left\">&nbsp;**How to do it?**\n",
     "\n",
-    "Let's take as example:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<!-- <img src=\"img/illustration.jpeg\" width=700> -->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b>Task: <a href=\"https://en.wikipedia.org/wiki/Multi-armed_bandit\">Bandit task</a></b>"
+    "Let's take as example:\n",
+    "<b><a href=\"https://en.wikipedia.org/wiki/Goal_orientation\">Goal orientation</a></b>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "N = 2\n",
-    "P = np.array([0.5, 0.75])\n",
-    "T = 500\n",
-    "\n",
-    "N_SUBJECTS = 30"
+    "a = 1 + 2\n",
+    "b = 3\n",
+    "a == b"
    ]
   },
   {
@@ -140,7 +120,7 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "\\forall i: p_{choice}(i) \\in [0, 1] \\wedge \\sum_{i}^N p_{choice}(i) = 1\n",
+    "\\forall i: \\sum_{i}^N x_i = x_1 + x_2 + \\cdots + x_n\n",
     "\\end{equation}"
    ]
   },
@@ -148,14 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Note: For more info, see the <a href=\"#S1.-Behavior-visualization\">supplementary section</a>).*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " ---"
+    "*Note: For more info, see the <a href=\"#Additional-material\">supplementary section</a>.*"
    ]
   },
   {
@@ -163,6 +136,13 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This an another paragraph."
    ]
   },
   {
@@ -171,14 +151,7 @@
    "source": [
     "<div class=\"alert alert-block alert-danger\">\n",
     "<h2><img src=\"img/logo/warning.png\" width=20, align=\"left\">&nbsp;Warning</h2>\n",
-    "    <br>You should look to the <a href=\"#S2.-Parameter-space-exploration\" class=\"alert-link\">supplementary</a> for that.</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
+    "    <br>You should look to the <a href=\"#Additional-material\" class=\"alert-link\">supplementary</a> for that.</div>"
    ]
   },
   {
@@ -192,11 +165,7 @@
     "<h2><img src=\"img/logo/goal.png\" width=20, align=\"left\">&nbsp;Learning objectives</h2>\n",
     "    <br>Learn by a basic example the elementary rules of decision making modeling, including:\n",
     "    <ul>\n",
-    "        <li>How to ... (see <a href=\"#1.-Task-Model-&-Decision-Making-Models\" class=\"alert-link\">Section 1</a>);\n",
-    "        <li>How to ...(see <a href=\"#2.-Exploratory-Simulations\" class=\"alert-link\">Section 2</a>);\n",
-    "        <li>How to ...(see <a href=\"#3.-Parameter-Fitting-&amp;-Parameter-Recovery\" class=\"alert-link\">Section 3</a>);\n",
-    "        <li>How to ... (see <a href=\"#4.-Model-Comparison-&amp;-Model-Recovery\" class=\"alert-link\">Section 4</a>);\n",
-    "        <li>How to ... (see <a href=\"#5.-Artificial-Experiment\" class=\"alert-link\">Section 5</a>);\n",
+    "        <li>How to ... (see <a href=\"#1.-Section-1\" class=\"alert-link\">Section 1</a>)\n",
     "    </ul>\n",
     "</div>\n"
    ]
