--- a/main.ipynb
+++ b/main.ipynb
@@ -53,7 +53,7 @@
     "## Course Overview\n",
     "\n",
     "\n",
-    "<img src=\"img/design.png\" width=30, align=\"left\">&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"font-size:2rem; font-weight:bold\"><a href=\"#1.-Part-1\">1. Section 1</a></span>\n",
+    "<img src=\"img/design.png\" width=\"30\" align=\"left\">&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"font-size:2rem; font-weight:bold\"><a href=\"#1.-Part-1\">1. Section 1</a></span>\n",
     "\n",
     "<a href=\"#1.1-Subsection-1.1\">1.1 Subsection 1.1</a>\n",
     "\n",
@@ -69,10 +69,10 @@
     "## 1. Section 1\n",
     "<a href=\"#Course-Overview\">Course Overview</a>\n",
     "\n",
-    "<img src=\"img/design.png\" width=300>\n",
+    "<img src=\"img/design.png\" width=\"300\">\n",
     "\n",
     "<div class=\"alert alert-block alert-success\">\n",
-    "<h3><img src=\"img/logo/goal.png\" width=20, align=\"left\">&nbsp;Section Goal</h3>\n",
+    "<h3><img src=\"img/logo/goal.png\" width=\"20\", align=\"left\">&nbsp;Section Goal</h3>\n",
     "<ul>\n",
     "    <li>How to XXX.\n",
     "    </ul>\n",
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/logo/how_to.png\" width=25, align=\"left\">&nbsp;**How to do it?**\n",
+    "<img src=\"img/logo/how_to.png\" width=\"25\" align=\"left\">&nbsp;<b>How to do it?</b>\n",
     "\n",
     "Let's take as example:\n",
     "<b><a href=\"https://en.wikipedia.org/wiki/Goal_orientation\">Goal orientation</a></b>"
@@ -150,7 +150,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-danger\">\n",
-    "<h2><img src=\"img/logo/warning.png\" width=20, align=\"left\">&nbsp;Warning</h2>\n",
+    "<h2><img src=\"img/logo/warning.png\" width=\"20\", align=\"left\">&nbsp;Warning</h2>\n",
     "    <br>You should look to the <a href=\"#Additional-material\" class=\"alert-link\">supplementary</a> for that.</div>"
    ]
   },
@@ -162,7 +162,7 @@
     "<a href=\"#Course-Overview\">Course Overview</a>\n",
     "\n",
     "<div class=\"alert alert-block alert-success\">\n",
-    "<h2><img src=\"img/logo/goal.png\" width=20, align=\"left\">&nbsp;Learning objectives</h2>\n",
+    "<h2><img src=\"img/logo/goal.png\" width=\"20\" align=\"left\">&nbsp;Learning objectives</h2>\n",
     "    <br>Learn by a basic example the elementary rules of decision making modeling, including:\n",
     "    <ul>\n",
     "        <li>How to ... (see <a href=\"#1.-Section-1\" class=\"alert-link\">Section 1</a>)\n",
