--- a/main.ipynb
+++ b/main.ipynb
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusive Remarks and a Few Take-Aways\n",
+    "## Conclusive Remarks and a Few Takeaways\n",
     "<a href=\"#Course-Overview\">Course Overview</a>\n",
     "\n",
     "<div class=\"alert alert-block alert-success\">\n",
